# BangidaBOT_AiTradeSupervisor

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: default.toml  live.toml  paper.toml
crates/bangida-backtest/: Cargo.toml
crates/bangida-backtest/src/: engine.rs  lib.rs  report.rs  sim_exchange.rs
crates/bangida-core/: Cargo.toml
crates/bangida-core/src/: config.rs  error.rs  lib.rs  time.rs  types.rs
crates/bangida-data/: Cargo.toml
crates/bangida-data/src/: candles.rs  indicators.rs  lib.rs  order_flow.rs  orderbook.rs  ringbuffer.rs  storage.rs
crates/bangida-exchange/: Cargo.toml
crates/bangida-exchange/src/: lib.rs  traits.rs
crates/bangida-exchange/src/binance/: auth.rs  mod.rs  models.rs  rate_limit.rs  rest.rs  ws.rs
crates/bangida-exchange/src/bybit/: auth.rs  mod.rs  models.rs  rate_limit.rs  rest.rs  ws.rs
crates/bangida-execution/: Cargo.toml
crates/bangida-execution/src/: executor.rs  fill_tracker.rs  latency.rs  lib.rs  order_manager.rs
crates/bangida-ml/: Cargo.toml
crates/bangida-ml/src/: features.rs  lib.rs  model.rs
crates/bangida-risk/: Cargo.toml
crates/bangida-risk/src/: circuit_breaker.rs  lib.rs  pnl_tracker.rs  position_sizer.rs  risk_manager.rs
crates/bangida-strategy/: Cargo.toml
crates/bangida-strategy/src/: ensemble.rs  funding_arb.rs  lib.rs  mean_reversion.rs  momentum.rs  ob_imbalance.rs  signal.rs  stat_arb.rs  traits.rs
crates/scalper-backtest/: Cargo.toml
crates/scalper-backtest/src/: engine.rs  historical.rs  lib.rs  replay.rs  report.rs  sim_exchange.rs
crates/scalper-core/: Cargo.toml
crates/scalper-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/scalper-data/: Cargo.toml
crates/scalper-data/src/: candles.rs  indicators.rs  lib.rs  order_flow.rs  orderbook.rs  regime.rs  ringbuffer.rs
crates/scalper-desktop/: Cargo.toml
crates/scalper-desktop/src/: app.rs  main.rs  ws_client.rs
crates/scalper-desktop/src/tabs/: dashboard.rs  mod.rs  settings.rs  trade_logic.rs
crates/scalper-exchange/: Cargo.toml
crates/scalper-exchange/src/: lib.rs  traits.rs
crates/scalper-exchange/src/binance/: auth.rs  mod.rs  models.rs  rest.rs  ws.rs
crates/scalper-exchange/src/bybit/: auth.rs  mod.rs  models.rs  rest.rs  ws.rs
crates/scalper-exchange/src/kraken/: auth.rs  mod.rs  models.rs  rest.rs  ws.rs
crates/scalper-exchange/src/okx/: auth.rs  mod.rs  models.rs  rest.rs  ws.rs
crates/scalper-execution/: Cargo.toml
crates/scalper-execution/src/: executor.rs  latency.rs  lib.rs  order_tracker.rs
crates/scalper-learning/: Cargo.toml
crates/scalper-learning/src/: database.rs  lib.rs
crates/scalper-risk/: Cargo.toml
crates/scalper-risk/src/: circuit_breaker.rs  lib.rs  pnl_tracker.rs  position_sizer.rs  risk_manager.rs
crates/scalper-strategy/: Cargo.toml
crates/scalper-strategy/src/: donchian.rs  ensemble.rs  funding_arb.rs  lib.rs  liquidation_wick.rs  ma_cross.rs  mean_reversion.rs  momentum.rs  ob_imbalance.rs  traits.rs
crates/scalper-strategy/src/strategies/: cvd_divergence.rs  ema_pullback.rs  mod.rs  rsi_fvg.rs  session_retrace.rs  supertrend.rs  volume_profile.rs
scripts/: launch.bat  stop.bat  wsl-setup.sh
src/: auto_tuner.rs  dashboard.html  dashboard.rs  file_logger.rs  learning.rs  main.rs  manifest.json  paper_sim.rs  system_metrics.rs
