[workspace]
resolver = "2"
members = [
    "crates/bangida-core",
    "crates/bangida-exchange",
    "crates/bangida-data",
    "crates/bangida-strategy",
    "crates/bangida-risk",
    "crates/bangida-execution",
    "crates/bangida-backtest",
    "crates/bangida-ml",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
crossbeam = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
url = "2"
futures-util = "0.3"
dashmap = "6"
smallvec = "1"
async-trait = "0.1"

[package]
name = "bangida-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
bangida-core = { path = "crates/bangida-core" }
bangida-exchange = { path = "crates/bangida-exchange" }
bangida-data = { path = "crates/bangida-data" }
bangida-strategy = { path = "crates/bangida-strategy" }
bangida-risk = { path = "crates/bangida-risk" }
bangida-execution = { path = "crates/bangida-execution" }
bangida-backtest = { path = "crates/bangida-backtest" }
bangida-ml = { path = "crates/bangida-ml" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
