[workspace]
resolver = "2"
members = [
    "crates/scalper-core",
    "crates/scalper-data",
    "crates/scalper-exchange",
    "crates/scalper-strategy",
    "crates/scalper-risk",
    "crates/scalper-execution",
    "crates/scalper-backtest",
    "crates/scalper-learning",
    "crates/scalper-desktop",
]

[package]
name = "crypto-scalper"
version = "0.1.0"
edition = "2021"
description = "Ultra-low-latency crypto futures scalping bot optimized for small accounts"

[[bin]]
name = "crypto-scalper"
path = "src/main.rs"

[dependencies]
scalper-core = { path = "crates/scalper-core" }
scalper-data = { path = "crates/scalper-data" }
scalper-exchange = { path = "crates/scalper-exchange" }
scalper-strategy = { path = "crates/scalper-strategy" }
scalper-risk = { path = "crates/scalper-risk" }
scalper-execution = { path = "crates/scalper-execution" }
scalper-backtest = { path = "crates/scalper-backtest" }
scalper-learning = { path = "crates/scalper-learning" }

tokio = { version = "1", features = ["full"] }
rand = "0.8"
sysinfo = "0.32"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
dotenvy = "0.15"
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["ws"] }
toml = "0.8"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "6"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
config = "0.14"
url = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
