[package]
name = "bangida-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
