[package]
name = "bangida-data"
version = "0.1.0"
edition = "2021"

[dependencies]
bangida-core = { path = "../bangida-core" }
rust_decimal = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
