[package]
name = "bangida-execution"
version = "0.1.0"
edition = "2021"

[dependencies]
bangida-core = { path = "../bangida-core" }
bangida-exchange = { path = "../bangida-exchange" }
bangida-risk = { path = "../bangida-risk" }
tokio = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
