[package]
name = "scalper-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scalper-desktop"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"
ewebsock = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
scalper-core = { path = "../scalper-core" }
open = "5"
