[package]
name = "scalper-exchange"
version = "0.1.0"
edition = "2021"

[dependencies]
scalper-core = { path = "../scalper-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
