[package]
name = "scalper-execution"
version = "0.1.0"
edition = "2021"

[dependencies]
scalper-core = { path = "../scalper-core" }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
