[package]
name = "scalper-risk"
version = "0.1.0"
edition = "2021"

[dependencies]
scalper-core = { path = "../scalper-core" }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
